<resources>
    <string name="app_name">Farmastock</string>
    <!--    LOG IN ACTIVITY-->
    <string name="form_login_username">Username</string>
    <string name="form_login_password">Password</string>
    <string name="form_login_title_1">FAR</string>
    <string name="form_login_title_2">STOCK</string>
    <string name="form_login_button_login">Sign in</string>
    <string name="form_login_register">Dont have an account? Register Here</string>
    <string name="form_login_welcome">Welcome back!</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email / Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_logout">Logout</string>
    <string name="welcome">Welcome !</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >=5 characters</string>
    <string name="login_failed">Login failed</string>
    <!-- Strings related to Main Activity -->
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="reminders">Reminders</string>
    <string name="home">Home</string>
    <string name="medicines">Medicines</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hi!</string>
    <string name="main_medicine_page_title">Medicines</string>
    <string name="main_medicine_page_button_add">Add medicine</string>
    <string name="form_add_medicine_title">Add medicine</string>
    <string name="form_name_medicina">Name</string>
    <string name="form_dose_medicina">Dose</string>
    <string name="form_quantity_medicina">Quantity</string>
    <string name="Guardar">Save medicine</string>
    <string name="main_medicine_page_title_select">Select</string>
    <string name="name">Name</string>
    <string name="dose">Dose</string>
    <string name="quantity">Quantity</string>
    <string name="action_delete_medicine">Delete</string>
    <string name="action_update_vehicle">Update</string>
    <string name="form_update_medicine_title">Update medicine</string>
    <string name="form_name_update">New name</string>
    <string name="form_nueva_dosis">New dose</string>
    <string name="form_nueva_cantidad">New quantity</string>
    <string name="main_medicine_page_name_LABEL">Name</string>
    <string name="form_name">Name</string>
    <string name="main_medicine_dosis">Dose</string>
    <string name="main_medicine_dosis_LABEL">Dose</string>
    <string name="main_medicine_cantidad_LABEL">Quantity</string>
    <string name="main_medicine_cantidad">Quantity</string>
    <string name="profile_label">Profile</string>
    <string name="username_label">Username</string>
    <string name="firstName_label">First Name</string>
    <string name="lastName_label">Last Name</string>
    <string name="action_update">Update</string>
    <string name="main_remainder_page_title">Reminders</string>
    <string name="main_remainder_page_button_add">Add reminder</string>
    <string name="item_remainder_desc_label">Description</string>
    <string name="item_remainder_desc_value"></string>
    <string name="item_remainder_date_label">Date-Time</string>
    <string name="item_remainder_date_value"></string>
    <string name="item_remainder_medicine_label">Medicine</string>
    <string name="item_remainder_medicine_value"></string>
    <string name="fecha_y_hora">Date-time</string>
    <string name="descripci_n">Description</string>
    <string name="medicine_name">Medicine</string>
    <string name="Terms_and_condiions"><u>Terms and conditions</u></string>
    <string name="Parrafo1">
        About the use of the application:\n\n

    1.1 In order to use the FarmaStock application, you must first agree to the License Agreement. You may not use the app if you do not accept the License Agreement\n.

    1.2 By clicking to accept and/or using this app, you hereby agree to the terms of the License Agreement\n.

    1.3 You may not use the app and may not accept the License Agreement if you are a person barred from receiving the app under the laws of the Costa Rica or other countries, including the country in which you are resident or from which you use the app\n

    \n\nAbout User Registration\n\n
    2.1 Your username and password may remain confidential, the app is not responsible for any identity theft.\n

    2.2 In case someone stole your in app identity, you can contact our support by creating a request in our social media and then, the team will process the request.\n

   </string>


</resources>