<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/main_medicine_page_name_LABEL" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/main_medicine_dosis" />

            <TextView
                android:id="@+id/dosis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_medicine_dosis_LABEL"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/main_medicine_cantidad_LABEL"/>

            <TextView
                android:id="@+id/cantidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_medicine_cantidad"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>