<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="171dp"
        android:layout_height="29dp"
        android:layout_marginTop="132dp"
        android:text="@string/form_login_welcome"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.237"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_1"
        android:layout_width="85dp"
        android:layout_height="57dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="64dp"
        android:text="@string/form_login_title_1"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView_2"
        android:layout_width="153dp"
        android:layout_height="58dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="36dp"
        android:text="@string/form_login_title_2"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/username"
        android:layout_width="246dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_email_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/form_login_username"
        android:inputType="textPersonName"
        android:text="admin@guzmanalan.com"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_2"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="246dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_lock_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/form_login_password"
        android:inputType="textPassword"
        android:text="12345"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_login_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintVertical_bias="0.329" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/form_login_button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:backgroundTint="@color/blue_farmastock"
        />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="201dp"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginEnd="170dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="170dp"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="60dp"
        android:layout_height="48dp"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toStartOf="@+id/textView_2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView_1"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/ic_plus_svgrepo_com" />

</androidx.constraintlayout.widget.ConstraintLayout>