<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent" android:gravity="center">

    <TextView
        android:id="@+id/et"
        android:layout_width="206dp"
        android:layout_height="32dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="104dp"
        android:text="Registration Form"
        android:textColor="#000"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_4" />

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:hint="First Name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et" />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="97dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="99dp"
        android:ems="10"
        android:hint="Last Name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFirstName" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLastName" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="97dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPersonName|textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <CheckBox
        android:id="@+id/validateTermsAndServices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="93dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/terms"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"></CheckBox>

    <TextView
        android:id="@+id/terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="123dp"
        android:text="@string/Terms_and_condiions"
        android:textColor="@color/blue_farmastock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/validateTermsAndServices"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"></TextView>

    <Button
        android:id="@+id/RgtButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="123dp"
        android:text="Register Now"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.78"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/terms"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView_4"
        android:layout_width="153dp"
        android:layout_height="58dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="78dp"
        android:text="@string/form_login_title_2"
        android:textSize="48sp"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_5"
        android:layout_width="85dp"
        android:layout_height="57dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="3dp"
        android:text="@string/form_login_title_1"
        android:textSize="48sp"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="60dp"
        android:layout_height="48dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="3dp"
        app:layout_constraintEnd_toStartOf="@+id/textView_4"
        app:layout_constraintStart_toEndOf="@+id/textView_5"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_plus_svgrepo_com" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="61dp"
        android:layout_height="63dp"
        android:layout_marginStart="312dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/pills_medicine_svgrepo_com" />

</androidx.constraintlayout.widget.ConstraintLayout>